--- a/web.config
+++ b/web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
 	<system.web>
+    
+      <customErrors mode="Off"/>
+    
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
